Add use of endorsed lib in run scripts