@@ -29,7 +29,7 @@ rem         its "classpath" internally.  To add your classes to those of
 rem         Tomcat, refer to the Tomcat Users Guide (tomcat_ug.html found
 rem         in the "doc" directory.
 rem
-rem $Id: tomcat.bat,v 1.48 2002/09/27 01:47:23 larryi Exp $
+rem $Id: tomcat.bat,v 1.49 2003/10/13 09:45:41 hgomez Exp $
 rem -------------------------------------------------------------------------
 
 
@@ -67,6 +67,9 @@ echo "%TOMCAT_HOME%\conf" not found.
 echo Unable to locate Tomcat's "conf" directory, check the value of TOMCAT_HOME.
 goto cleanup
 :okTcHome
+
+rem Set the default -Djava.endorsed.dirs argument
+set JAVA_ENDORSED_DIRS=%TOMCAT_HOME%\lib\endorsed
 
 if not "%TOMCAT_INSTALL%" == "" goto gotTcInstall
 set TOMCAT_INSTALL=.
@@ -134,12 +137,12 @@ echo Starting Tomcat in new window
 if "%2" == "sandbox" goto startSecure
 if "%2" == "-sandbox" goto startSecure
 rem Note: Specify tomcat.policy in case -sandbox isn't the second argument
-%_STARTJAVA% %TOMCAT_OPTS% -Djava.security.policy=="%TOMCAT_HOME%/conf/tomcat.policy" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% start %2 %3 %4 %5 %6 %7 %8 %9
+%_STARTJAVA% %TOMCAT_OPTS% -Djava.security.policy=="%TOMCAT_HOME%/conf/tomcat.policy" -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% start %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :startSecure
 echo Starting Tomcat with a SecurityManager
-%_SECSTARTJAVA% %TOMCAT_OPTS% -Djava.security.policy=="%TOMCAT_HOME%/conf/tomcat.policy" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% start %2 %3 %4 %5 %6 %7 %8 %9
+%_SECSTARTJAVA% %TOMCAT_OPTS% -Djava.security.policy=="%TOMCAT_HOME%/conf/tomcat.policy" -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% start %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :runServer
@@ -147,31 +150,31 @@ rem Backwards compatibility for enableAdmin
 if "%2" == "enableAdmin" goto oldEnbAdmin
 if "%2" == "-enableAdmin" goto oldEnbAdmin
 rem Running Tomcat in this window
-%_RUNJAVA% %TOMCAT_OPTS% -Djava.security.policy=="%TOMCAT_HOME%/conf/tomcat.policy" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% start %2 %3 %4 %5 %6 %7 %8 %9
+%_RUNJAVA% %TOMCAT_OPTS% -Djava.security.policy=="%TOMCAT_HOME%/conf/tomcat.policy" -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% start %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :enableAdmin
 rem Run enableAdmin
-%_RUNJAVA% %TOMCAT_OPTS% -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% enableAdmin %2 %3 %4 %5 %6 %7 %8 %9
+%_RUNJAVA% %TOMCAT_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% enableAdmin %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :oldEnbAdmin
 rem Run enableAdmin
-%_RUNJAVA% %TOMCAT_OPTS% -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% enableAdmin %3 %4 %5 %6 %7 %8 %9
+%_RUNJAVA% %TOMCAT_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% enableAdmin %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :estart
-%_RUNJAVA% %TOMCAT_OPTS% -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% estart %2 %3 %4 %5 %6 %7 %8 %9
+%_RUNJAVA% %TOMCAT_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% estart %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :stopServer
 rem Stopping the Tomcat Server
-%_RUNJAVA% %TOMCAT_OPTS% -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% stop %2 %3 %4 %5 %6 %7 %8 %9
+%_RUNJAVA% %TOMCAT_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% stop %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 :runJspc
 rem Run JSPC in Tomcat's Environment
-%_RUNJAVA% %JSPC_OPTS% -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% jspc %2 %3 %4 %5 %6 %7 %8 %9
+%_RUNJAVA% %JSPC_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -Dtomcat.home="%TOMCAT_HOME%" %_MAIN% jspc %2 %3 %4 %5 %6 %7 %8 %9
 goto cleanup
 
 rem ----- Set CLASSPATH to Tomcat's Runtime Environment ----------------------- 
